data/derived/comb/progs/unify/prog6768.ml.out
Characters 499-500:
  if eval(x12,x,y) < 0
                     ^
Error: This expression has type int but an expression was expected of type
         float
